# Concorde

./: .gitignore  CMakeLists.txt  Config.cmake  README.md
CMake/Modules/: FindGLEW_Concorde.cmake  FindSDL2_Concorde.cmake  FindSDLCon.cmake
CMake/Toolchains/: AddExecutable.cmake  Platforms.cmake  Wii.cmake
Examples/: CMakeLists.txt
Examples/01_HelloConcorde/: CMakeLists.txt  Main.c
Examples/02_HelloTriangle/: CMakeLists.txt  Main.c
Include/: Concorde.h  Concorde_Enums.h  Concorde_Input_System.h  Concorde_Render.h  Concorde_Vertex_Attributes.h
Source/: CMakeLists.txt  ConcordeInternal.h  Concore.c
Source/Input/: CMakeLists.txt  Concorde_Internal_Inputs.h  Inputs.c
Source/Platform/: CMakeLists.txt  ConcordePlatform.h
Source/Platform/Desktop/: CMakeLists.txt  Desktop.h  DesktopConcorde.c
Source/Platform/Desktop/Render/: CMakeLists.txt  GLSL_Fragment.glsl  GLSL_Vertex.glsl  GL_Debug.c  GL_Render.h  GL_Render_Immediate.c  GL_Render_init.c
Source/Platform/Wii/: CMakeLists.txt  Wii.h  WiiConcorde.c  WiiInputs.c
Source/Platform/Wii/Render/: CMakeLists.txt  GX_Render.c  GX_Render.h  GX_Render_Immediate.c
Source/Render/: CMakeLists.txt  Concorde_Internal_Render.h  Render.c
